--- a/lang/pgc-es_ES.po
+++ b/lang/pgc-es_ES.po
@@ -2,15 +2,15 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Plugins Garbage Collector\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2010-05-01 07:40+0600\n"
+"POT-Creation-Date: 2010-05-01 07:34+0600\n"
 "PO-Revision-Date: \n"
 "Last-Translator: vladimir <vladimir@shinephp.com>\n"
-"Language-Team: ShinePHP.com <vladimir@shinephp.com>\n"
+"Language-Team: MLL Designs <me_leon@hotmail.com>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Poedit-Language: Russian\n"
-"X-Poedit-Country: RUSSIAN FEDERATION\n"
+"X-Poedit-Language: Spanish\n"
+"X-Poedit-Country: SPAIN\n"
 "X-Poedit-SourceCharset: utf-8\n"
 "X-Poedit-KeywordsList: __;_e\n"
 "X-Poedit-Basepath: .\n"
@@ -18,20 +18,20 @@ msgstr ""
 
 #: ../pgc-options.php:53
 msgid "About this Plugin:"
-msgstr "Об этом плагине:"
+msgstr "Acerca de este plugin:"
 
 #: ../pgc-options.php:54
 msgid "Author's website"
-msgstr "Вебсайт автора"
+msgstr "Website del autor"
 
 #: ../pgc-options.php:55
 msgid "Plugin webpage"
-msgstr "Вебстраница плагина"
+msgstr "Página del plugin"
 
 #: ../pgc-options.php:56
 #: ../plugins-garbage-collector.php:98
 msgid "Changelog"
-msgstr "История изменений"
+msgstr "Historial de cambios"
 
 #: ../pgc-options.php:57
 msgid "FAQ"
@@ -39,80 +39,80 @@ msgstr "FAQ"
 
 #: ../pgc-options.php:58
 msgid "Donate"
-msgstr "Поддержка"
+msgstr "Donar"
 
 #: ../pgc-options.php:60
 msgid "Greetings:"
-msgstr "Благодарности:"
+msgstr "Saludos:"
 
 #: ../pgc-options.php:61
 msgid "It's me, the author"
-msgstr "Это я, автор"
+msgstr "Soy yo, el autor"
 
 #: ../pgc-options.php:62
 msgid "For the help with French translation"
-msgstr "За помощь с французским переводом"
+msgstr "Por la ayuda con la traducción al Francés"
 
 #: ../pgc-options.php:63
 msgid "For the help with Indonesian translation"
-msgstr "За помощь с индонезийским переводом"
+msgstr ""
 
 #: ../pgc-options.php:64
 msgid "For the help with Spanish translation"
-msgstr "За помощь с испанским переводом"
+msgstr "Por la ayuda con la traducción al Español"
 
 #: ../pgc-options.php:65
 msgid "Do you wish to see your name with link to your site here? You are welcome! Your help with translation and new ideas are very appreciated."
-msgstr "Желаете увидеть здесь свое имя и ссылку на ваш сайт? Добро пожаловать! Ваша помощь с переводом и новые идеи будут как нельзя кстати."
+msgstr "¿Deseas ver tu nombre con enlace a tu sitio en esta lista? Eres bienvenido! Tu ayuda con la traducción y las nuevas ideas son muy apreciadas."
 
 #: ../pgc-options.php:74
 msgid "Scanning"
-msgstr "Сканирование"
+msgstr "Escaneando"
 
 #: ../pgc-options.php:78
 msgid "will take some time. Please confirm to continue"
-msgstr "займет некоторое время. Подтверждите, пожалуйста, чтобы продолжить"
+msgstr "esto tomará algún tiempo. Por favor, confirme para continuar"
 
 #: ../pgc-options.php:87
 msgid "Cleanup: please confirm to continue"
-msgstr "Зачистка: пожалуйста подтвердите, чтобы продолжить"
+msgstr "Limpiar: por favor confirme para continuar"
 
 #: ../pgc-options.php:95
 msgid "Click &lt;Scan&gt; to gather information how plugins use your WordPress database"
-msgstr "Щелкните &lt;Сканировать&gt;, чтобы собрать информацию о том, как плагины используют базу данных вашего WordPress"
+msgstr "Haga clic en <Escanear> para obtener información de cómo los plugins utilizan la base de datos de WordPress"
 
 #: ../pgc-options.php:99
 #: ../plugins-garbage-collector.php:88
 msgid "Scan"
-msgstr "Сканирование"
+msgstr "Escanear"
 
 #: ../pgc-options.php:107
 msgid "Let's see what tables in your database do not belong to the core WordPress installation:"
-msgstr "Давайте посмотрим, какие таблицы в вашей базе данных не принадлежать основной установке WordPress:"
+msgstr "WordPress:"
 
 #: ../pgc-options.php:113
 msgid "Table Name"
-msgstr "Название таблицы"
+msgstr "Nombre de la tabla"
 
 #: ../pgc-options.php:114
 msgid "Records #"
-msgstr "Записей #"
+msgstr "Registros"
 
 #: ../pgc-options.php:115
 msgid "KBytes #"
-msgstr "Килобайт #"
+msgstr "KBytes"
 
 #: ../pgc-options.php:116
 msgid "Plugin Name"
-msgstr "Название плагина"
+msgstr "Nombre del plugin"
 
 #: ../pgc-options.php:117
 msgid "Plugin State"
-msgstr "Состояние плагина"
+msgstr "Estado del plugin"
 
 #: ../pgc-options.php:176
 msgid "Congratulations! It seems that your WordPress database is clean."
-msgstr "Поздравляем! Похоже, что ваша WordPress база данных чиста."
+msgstr "Felicitaciones! Al parecer la base de datos de Wordpress está limpia."
 
 #: ../plugins-garbage-collector.php:41
 msgid "Plugins Garbage Collector"
@@ -120,11 +120,11 @@ msgstr "Plugins Garbage Collector"
 
 #: ../plugins-garbage-collector.php:43
 msgid " requires WordPress 2.9 or newer."
-msgstr " требует WordPress 2.9 или новее"
+msgstr " requiere WordPress 2.9 en adelante."
 
 #: ../plugins-garbage-collector.php:43
 msgid "Please update!"
-msgstr "Пожалуйста обновите!"
+msgstr "Por favor actualice!"
 
 #~ msgid "Action Page"
 #~ msgstr "Страница действий"
