--- a/lang/pgc-fr_FR.po
+++ b/lang/pgc-fr_FR.po
@@ -2,15 +2,15 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Plugins Garbage Collector\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2010-05-01 07:40+0600\n"
+"POT-Creation-Date: 2010-05-01 07:38+0600\n"
 "PO-Revision-Date: \n"
 "Last-Translator: vladimir <vladimir@shinephp.com>\n"
-"Language-Team: ShinePHP.com <vladimir@shinephp.com>\n"
+"Language-Team: saymonz.net <my.n@me.is.saymonz.net>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Poedit-Language: Russian\n"
-"X-Poedit-Country: RUSSIAN FEDERATION\n"
+"X-Poedit-Language: French\n"
+"X-Poedit-Country: FRANCE\n"
 "X-Poedit-SourceCharset: utf-8\n"
 "X-Poedit-KeywordsList: __;_e\n"
 "X-Poedit-Basepath: .\n"
@@ -18,20 +18,20 @@ msgstr ""
 
 #: ../pgc-options.php:53
 msgid "About this Plugin:"
-msgstr "Об этом плагине:"
+msgstr "À propos de cette extension :"
 
 #: ../pgc-options.php:54
 msgid "Author's website"
-msgstr "Вебсайт автора"
+msgstr "Site web de l'auteur"
 
 #: ../pgc-options.php:55
 msgid "Plugin webpage"
-msgstr "Вебстраница плагина"
+msgstr "Page web de l'extension"
 
 #: ../pgc-options.php:56
 #: ../plugins-garbage-collector.php:98
 msgid "Changelog"
-msgstr "История изменений"
+msgstr "Journal des modifications"
 
 #: ../pgc-options.php:57
 msgid "FAQ"
@@ -39,80 +39,80 @@ msgstr "FAQ"
 
 #: ../pgc-options.php:58
 msgid "Donate"
-msgstr "Поддержка"
+msgstr "Faire un don"
 
 #: ../pgc-options.php:60
 msgid "Greetings:"
-msgstr "Благодарности:"
+msgstr "Remerciements :"
 
 #: ../pgc-options.php:61
 msgid "It's me, the author"
-msgstr "Это я, автор"
+msgstr "C'est moi, l'auteur"
 
 #: ../pgc-options.php:62
 msgid "For the help with French translation"
-msgstr "За помощь с французским переводом"
+msgstr "Pour l'aide avec la traduction française"
 
 #: ../pgc-options.php:63
 msgid "For the help with Indonesian translation"
-msgstr "За помощь с индонезийским переводом"
+msgstr ""
 
 #: ../pgc-options.php:64
 msgid "For the help with Spanish translation"
-msgstr "За помощь с испанским переводом"
+msgstr "Pour l'aide avec la traduction polonais"
 
 #: ../pgc-options.php:65
 msgid "Do you wish to see your name with link to your site here? You are welcome! Your help with translation and new ideas are very appreciated."
-msgstr "Желаете увидеть здесь свое имя и ссылку на ваш сайт? Добро пожаловать! Ваша помощь с переводом и новые идеи будут как нельзя кстати."
+msgstr "Voudriez vous voir votre nom et un lien vers votre site ici ? Vous êtes le bienvenu ! Votre aide avec les traductions et vos idées sont très appréciées."
 
 #: ../pgc-options.php:74
 msgid "Scanning"
-msgstr "Сканирование"
+msgstr "Scan"
 
 #: ../pgc-options.php:78
 msgid "will take some time. Please confirm to continue"
-msgstr "займет некоторое время. Подтверждите, пожалуйста, чтобы продолжить"
+msgstr "Cela va prendre un moment. Veuillez confirmer pour continuer."
 
 #: ../pgc-options.php:87
 msgid "Cleanup: please confirm to continue"
-msgstr "Зачистка: пожалуйста подтвердите, чтобы продолжить"
+msgstr "Nettoyage : veuillez confirmer pour continuer"
 
 #: ../pgc-options.php:95
 msgid "Click &lt;Scan&gt; to gather information how plugins use your WordPress database"
-msgstr "Щелкните &lt;Сканировать&gt;, чтобы собрать информацию о том, как плагины используют базу данных вашего WordPress"
+msgstr "Cliquez sur &lt;Scan&gt; pour collecter les informations sur comment les extensions utilisent votre base de données WordPress"
 
 #: ../pgc-options.php:99
 #: ../plugins-garbage-collector.php:88
 msgid "Scan"
-msgstr "Сканирование"
+msgstr "Scan"
 
 #: ../pgc-options.php:107
 msgid "Let's see what tables in your database do not belong to the core WordPress installation:"
-msgstr "Давайте посмотрим, какие таблицы в вашей базе данных не принадлежать основной установке WordPress:"
+msgstr "Voyons quelles tables de votre base de données n'appartiennent pas au coeur de votre installation WordPress :"
 
 #: ../pgc-options.php:113
 msgid "Table Name"
-msgstr "Название таблицы"
+msgstr "Nom de la table"
 
 #: ../pgc-options.php:114
 msgid "Records #"
-msgstr "Записей #"
+msgstr "Enregistrements #"
 
 #: ../pgc-options.php:115
 msgid "KBytes #"
-msgstr "Килобайт #"
+msgstr "KBytes #"
 
 #: ../pgc-options.php:116
 msgid "Plugin Name"
-msgstr "Название плагина"
+msgstr "Nom de l'extension"
 
 #: ../pgc-options.php:117
 msgid "Plugin State"
-msgstr "Состояние плагина"
+msgstr "Statut de l'extension"
 
 #: ../pgc-options.php:176
 msgid "Congratulations! It seems that your WordPress database is clean."
-msgstr "Поздравляем! Похоже, что ваша WordPress база данных чиста."
+msgstr "Félicitations ! Il semble que votre base de données WordPress soit propre."
 
 #: ../plugins-garbage-collector.php:41
 msgid "Plugins Garbage Collector"
@@ -120,12 +120,9 @@ msgstr "Plugins Garbage Collector"
 
 #: ../plugins-garbage-collector.php:43
 msgid " requires WordPress 2.9 or newer."
-msgstr " требует WordPress 2.9 или новее"
+msgstr "nécéssite WordPress 2.9 ou plus récent."
 
 #: ../plugins-garbage-collector.php:43
 msgid "Please update!"
-msgstr "Пожалуйста обновите!"
-
-#~ msgid "Action Page"
-#~ msgstr "Страница действий"
+msgstr "Veuillez mettre à jour !"
 
