--- a/lang/pgc-id_ID.po
+++ b/lang/pgc-id_ID.po
@@ -1,16 +1,16 @@
 msgid ""
 msgstr ""
-"Project-Id-Version: Plugins Garbage Collector\n"
+"Project-Id-Version: Plugins Garbage Collector Indonesian Language\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2010-05-01 07:40+0600\n"
 "PO-Revision-Date: \n"
 "Last-Translator: vladimir <vladimir@shinephp.com>\n"
-"Language-Team: ShinePHP.com <vladimir@shinephp.com>\n"
+"Language-Team: Masino Sinaga <admin@openscriptsolution.com>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Poedit-Language: Russian\n"
-"X-Poedit-Country: RUSSIAN FEDERATION\n"
+"X-Poedit-Language: Indonesian\n"
+"X-Poedit-Country: INDONESIA\n"
 "X-Poedit-SourceCharset: utf-8\n"
 "X-Poedit-KeywordsList: __;_e\n"
 "X-Poedit-Basepath: .\n"
@@ -18,20 +18,20 @@ msgstr ""
 
 #: ../pgc-options.php:53
 msgid "About this Plugin:"
-msgstr "Об этом плагине:"
+msgstr "Mengenai Plugin ini:"
 
 #: ../pgc-options.php:54
 msgid "Author's website"
-msgstr "Вебсайт автора"
+msgstr "Situs Pembuat"
 
 #: ../pgc-options.php:55
 msgid "Plugin webpage"
-msgstr "Вебстраница плагина"
+msgstr "Situs Plugin"
 
 #: ../pgc-options.php:56
 #: ../plugins-garbage-collector.php:98
 msgid "Changelog"
-msgstr "История изменений"
+msgstr "Catatan perubahan"
 
 #: ../pgc-options.php:57
 msgid "FAQ"
@@ -39,80 +39,80 @@ msgstr "FAQ"
 
 #: ../pgc-options.php:58
 msgid "Donate"
-msgstr "Поддержка"
+msgstr "Donasi"
 
 #: ../pgc-options.php:60
 msgid "Greetings:"
-msgstr "Благодарности:"
+msgstr "Ucapan:"
 
 #: ../pgc-options.php:61
 msgid "It's me, the author"
-msgstr "Это я, автор"
+msgstr "Ini saya, pembuat"
 
 #: ../pgc-options.php:62
 msgid "For the help with French translation"
-msgstr "За помощь с французским переводом"
+msgstr ""
 
 #: ../pgc-options.php:63
 msgid "For the help with Indonesian translation"
-msgstr "За помощь с индонезийским переводом"
+msgstr ""
 
 #: ../pgc-options.php:64
 msgid "For the help with Spanish translation"
-msgstr "За помощь с испанским переводом"
+msgstr ""
 
 #: ../pgc-options.php:65
 msgid "Do you wish to see your name with link to your site here? You are welcome! Your help with translation and new ideas are very appreciated."
-msgstr "Желаете увидеть здесь свое имя и ссылку на ваш сайт? Добро пожаловать! Ваша помощь с переводом и новые идеи будут как нельзя кстати."
+msgstr "Anda ingin melihat nama Anda dengan tautan ke situs Anda di sini? Silahkan! Bantuan terjemahan Anda dan ide baru sangat dihargai."
 
 #: ../pgc-options.php:74
 msgid "Scanning"
-msgstr "Сканирование"
+msgstr "Sedang memindai"
 
 #: ../pgc-options.php:78
 msgid "will take some time. Please confirm to continue"
-msgstr "займет некоторое время. Подтверждите, пожалуйста, чтобы продолжить"
+msgstr "membutuhkan beberapa menit. Konfirmasikan untuk melanjutkan"
 
 #: ../pgc-options.php:87
 msgid "Cleanup: please confirm to continue"
-msgstr "Зачистка: пожалуйста подтвердите, чтобы продолжить"
+msgstr "Pembersihan: konfirmasikan untuk melanjutkan"
 
 #: ../pgc-options.php:95
 msgid "Click &lt;Scan&gt; to gather information how plugins use your WordPress database"
-msgstr "Щелкните &lt;Сканировать&gt;, чтобы собрать информацию о том, как плагины используют базу данных вашего WordPress"
+msgstr "Klik &lt;Pindai&gt; untuk mendapatkan informasi bagaiman plugin menggunakan basis data WordPress Anda"
 
 #: ../pgc-options.php:99
 #: ../plugins-garbage-collector.php:88
 msgid "Scan"
-msgstr "Сканирование"
+msgstr "Pindai"
 
 #: ../pgc-options.php:107
 msgid "Let's see what tables in your database do not belong to the core WordPress installation:"
-msgstr "Давайте посмотрим, какие таблицы в вашей базе данных не принадлежать основной установке WordPress:"
+msgstr "Ayo kita lihat tabel apa yang terdapat di basis data Anda yang tidak memiliki ke instalasi utama WordPress:"
 
 #: ../pgc-options.php:113
 msgid "Table Name"
-msgstr "Название таблицы"
+msgstr "Nama Tabel"
 
 #: ../pgc-options.php:114
 msgid "Records #"
-msgstr "Записей #"
+msgstr "Record #"
 
 #: ../pgc-options.php:115
 msgid "KBytes #"
-msgstr "Килобайт #"
+msgstr "KBytes #"
 
 #: ../pgc-options.php:116
 msgid "Plugin Name"
-msgstr "Название плагина"
+msgstr "Nama Plugin"
 
 #: ../pgc-options.php:117
 msgid "Plugin State"
-msgstr "Состояние плагина"
+msgstr "Status Plugin"
 
 #: ../pgc-options.php:176
 msgid "Congratulations! It seems that your WordPress database is clean."
-msgstr "Поздравляем! Похоже, что ваша WordPress база данных чиста."
+msgstr "Selamat! Nampaknya basis data WordPress Anda saat ini bersih."
 
 #: ../plugins-garbage-collector.php:41
 msgid "Plugins Garbage Collector"
@@ -120,11 +120,11 @@ msgstr "Plugins Garbage Collector"
 
 #: ../plugins-garbage-collector.php:43
 msgid " requires WordPress 2.9 or newer."
-msgstr " требует WordPress 2.9 или новее"
+msgstr " membutuhkan WordPress versi 2.9 atau yang lebih tinggi"
 
 #: ../plugins-garbage-collector.php:43
 msgid "Please update!"
-msgstr "Пожалуйста обновите!"
+msgstr "Silahkan perbaharui!"
 
 #~ msgid "Action Page"
 #~ msgstr "Страница действий"
