--- a/lang/pgc-de_DE.po
+++ b/lang/pgc-de_DE.po
@@ -5,33 +5,33 @@ msgstr ""
 "POT-Creation-Date: 2010-05-01 20:00+0600\n"
 "PO-Revision-Date: \n"
 "Last-Translator: vladimir <vladimir@shinephp.com>\n"
-"Language-Team: MLL Designs <me_leon@hotmail.com>\n"
+"Language-Team: Christian Lederer <tips@irc-junkie.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Poedit-Language: Spanish\n"
-"X-Poedit-Country: SPAIN\n"
 "X-Poedit-SourceCharset: utf-8\n"
 "X-Poedit-KeywordsList: __;_e\n"
 "X-Poedit-Basepath: .\n"
+"X-Poedit-Language: German\n"
+"X-Poedit-Country: GERMANY\n"
 "X-Poedit-SearchPath-0: ..\n"
 
 #: ../pgc-options.php:53
 msgid "About this Plugin:"
-msgstr "Acerca de este plugin:"
+msgstr "Über dieses Plugin:"
 
 #: ../pgc-options.php:54
 msgid "Author's website"
-msgstr "Website del autor"
+msgstr "Webseite des Authors"
 
 #: ../pgc-options.php:55
 msgid "Plugin webpage"
-msgstr "Página del plugin"
+msgstr "Plugin Webseite"
 
 #: ../pgc-options.php:56
 #: ../plugins-garbage-collector.php:98
 msgid "Changelog"
-msgstr "Historial de cambios"
+msgstr "Liste der Änderungen"
 
 #: ../pgc-options.php:57
 msgid "FAQ"
@@ -39,88 +39,88 @@ msgstr "FAQ"
 
 #: ../pgc-options.php:58
 msgid "Donate"
-msgstr "Donar"
+msgstr "Spenden"
 
 #: ../pgc-options.php:60
 msgid "Greetings:"
-msgstr "Saludos:"
+msgstr "Grüße:"
 
 #: ../pgc-options.php:61
 msgid "It's me, the author"
-msgstr "Soy yo, el autor"
+msgstr "Ich bins, der Author"
 
 #: ../pgc-options.php:62
 msgid "For the help with French translation"
-msgstr "Por la ayuda con la traducción al Francés"
+msgstr "Hilfe bei der Übersetzung ins Französische"
 
 #: ../pgc-options.php:63
 msgid "For the help with German translation"
-msgstr "Por la ayuda con la traducción al alemán"
+msgstr "Hilfe bei der Übersetzung ins Deutsche"
 
 #: ../pgc-options.php:64
 msgid "For the help with Indonesian translation"
-msgstr "Por la ayuda con la traducción al Indonesio"
+msgstr "Hilfe bei der Übersetzung ins Indonesische"
 
 #: ../pgc-options.php:65
 msgid "For the help with Japanese translation"
-msgstr "Por la ayuda con la traducción al Japonés"
+msgstr "Hilfe bei der Übersetzung ins Japanisch"
 
 #: ../pgc-options.php:66
 msgid "For the help with Spanish translation"
-msgstr "Por la ayuda con la traducción al Español"
+msgstr "Hilfe bei der Übersetzung ins Spanische"
 
 #: ../pgc-options.php:67
 msgid "Do you wish to see your name with link to your site here? You are welcome! Your help with translation and new ideas are very appreciated."
-msgstr "¿Deseas ver tu nombre con enlace a tu sitio en esta lista? Eres bienvenido! Tu ayuda con la traducción y las nuevas ideas son muy apreciadas."
+msgstr "Möchten Sie hier Ihren Namen und einen Link zu Ihrer Seite sehen? Sehr gerne! Ihre Hilfe bei der Übersetzung und neuen Ideen für das Plugin sind herzlich willkommen."
 
 #: ../pgc-options.php:76
 msgid "Scanning"
-msgstr "Escaneando"
+msgstr "Durchsuchen"
 
 #: ../pgc-options.php:80
 msgid "will take some time. Please confirm to continue"
-msgstr "esto tomará algún tiempo. Por favor, confirme para continuar"
+msgstr "dauert einige Zeit. Bitte bestätigen um fortzusetzen"
 
 #: ../pgc-options.php:89
 msgid "Cleanup: please confirm to continue"
-msgstr "Limpiar: por favor confirme para continuar"
+msgstr "Aufräumen: Bitte bestätigen um fortzufahren"
 
 #: ../pgc-options.php:97
 msgid "Click &lt;Scan&gt; to gather information how plugins use your WordPress database"
-msgstr "Haga clic en <Escanear> para obtener información de cómo los plugins utilizan la base de datos de WordPress"
+msgstr "Klicken Sie &lt;Scan&gt; um Informationen über Plugin-Daten in Ihrer WordPress-Datenbank zu sammeln"
 
 #: ../pgc-options.php:101
 #: ../plugins-garbage-collector.php:88
 msgid "Scan"
-msgstr "Escanear"
+msgstr "Scan"
 
 #: ../pgc-options.php:109
 msgid "Let's see what tables in your database do not belong to the core WordPress installation:"
-msgstr "WordPress:"
+msgstr "Sehen wir nach welche Tabellen in Ihrer Datenbank nicht zum Kern der WordPress Installation gehören:"
 
 #: ../pgc-options.php:115
 msgid "Table Name"
-msgstr "Nombre de la tabla"
+msgstr "Tabellen Name"
 
 #: ../pgc-options.php:116
 msgid "Records #"
-msgstr "Registros"
+msgstr "Einträge #"
 
 #: ../pgc-options.php:117
 msgid "KBytes #"
-msgstr "KBytes"
+msgstr "KBytes #"
 
 #: ../pgc-options.php:118
 msgid "Plugin Name"
-msgstr "Nombre del plugin"
+msgstr "Plugin-Name"
 
 #: ../pgc-options.php:119
 msgid "Plugin State"
-msgstr "Estado del plugin"
+msgstr "Plugin-Status"
 
 #: ../pgc-options.php:178
 msgid "Congratulations! It seems that your WordPress database is clean."
-msgstr "Felicitaciones! Al parecer la base de datos de Wordpress está limpia."
+msgstr "Gratulation! Anscheinend ist Ihre WordPress-Datenbank sauber."
 
 #: ../plugins-garbage-collector.php:41
 msgid "Plugins Garbage Collector"
@@ -128,12 +128,9 @@ msgstr "Plugins Garbage Collector"
 
 #: ../plugins-garbage-collector.php:43
 msgid " requires WordPress 2.9 or newer."
-msgstr " requiere WordPress 2.9 en adelante."
+msgstr "benötigt WordPress 2.9 oder neuer."
 
 #: ../plugins-garbage-collector.php:43
 msgid "Please update!"
-msgstr "Por favor actualice!"
-
-#~ msgid "Action Page"
-#~ msgstr "Страница действий"
+msgstr "Bitte aktualisieren!"
 
