--- a/lang/pgc-ja.po
+++ b/lang/pgc-ja.po
@@ -2,15 +2,15 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Plugins Garbage Collector\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2010-05-01 20:00+0600\n"
+"POT-Creation-Date: 2010-05-01 20:04+0600\n"
 "PO-Revision-Date: \n"
 "Last-Translator: vladimir <vladimir@shinephp.com>\n"
-"Language-Team: MLL Designs <me_leon@hotmail.com>\n"
+"Language-Team: yoichi <www.ad-minister.net/mail/>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Poedit-Language: Spanish\n"
-"X-Poedit-Country: SPAIN\n"
+"X-Poedit-Language: Japanese\n"
+"X-Poedit-Country: JAPAN\n"
 "X-Poedit-SourceCharset: utf-8\n"
 "X-Poedit-KeywordsList: __;_e\n"
 "X-Poedit-Basepath: .\n"
@@ -18,121 +18,121 @@ msgstr ""
 
 #: ../pgc-options.php:53
 msgid "About this Plugin:"
-msgstr "Acerca de este plugin:"
+msgstr "このプラグインについて："
 
 #: ../pgc-options.php:54
 msgid "Author's website"
-msgstr "Website del autor"
+msgstr "作者のウェブサイト"
 
 #: ../pgc-options.php:55
 msgid "Plugin webpage"
-msgstr "Página del plugin"
+msgstr "プラグインのウェブサイト"
 
 #: ../pgc-options.php:56
 #: ../plugins-garbage-collector.php:98
 msgid "Changelog"
-msgstr "Historial de cambios"
+msgstr "変更ログ"
 
 #: ../pgc-options.php:57
 msgid "FAQ"
-msgstr "FAQ"
+msgstr "ＦＡＱ"
 
 #: ../pgc-options.php:58
 msgid "Donate"
-msgstr "Donar"
+msgstr "寄付"
 
 #: ../pgc-options.php:60
 msgid "Greetings:"
-msgstr "Saludos:"
+msgstr "感謝："
 
 #: ../pgc-options.php:61
 msgid "It's me, the author"
-msgstr "Soy yo, el autor"
+msgstr "作者です"
 
 #: ../pgc-options.php:62
 msgid "For the help with French translation"
-msgstr "Por la ayuda con la traducción al Francés"
+msgstr "フランス語翻訳のヘルプには"
 
 #: ../pgc-options.php:63
 msgid "For the help with German translation"
-msgstr "Por la ayuda con la traducción al alemán"
+msgstr "ドイツ語翻訳"
 
 #: ../pgc-options.php:64
 msgid "For the help with Indonesian translation"
-msgstr "Por la ayuda con la traducción al Indonesio"
+msgstr "インドネシア語翻訳のヘルプには"
 
 #: ../pgc-options.php:65
 msgid "For the help with Japanese translation"
-msgstr "Por la ayuda con la traducción al Japonés"
+msgstr "日本語翻訳"
 
 #: ../pgc-options.php:66
 msgid "For the help with Spanish translation"
-msgstr "Por la ayuda con la traducción al Español"
+msgstr "スペイン語翻訳のヘルプには"
 
 #: ../pgc-options.php:67
 msgid "Do you wish to see your name with link to your site here? You are welcome! Your help with translation and new ideas are very appreciated."
-msgstr "¿Deseas ver tu nombre con enlace a tu sitio en esta lista? Eres bienvenido! Tu ayuda con la traducción y las nuevas ideas son muy apreciadas."
+msgstr "翻訳や新しいアイデアへのサポートをしていただいた方には、こちらにお名前とサイトへのリンクを掲載しています。皆様からのご協力をお待ちしています。"
 
 #: ../pgc-options.php:76
 msgid "Scanning"
-msgstr "Escaneando"
+msgstr "スキャン中"
 
 #: ../pgc-options.php:80
 msgid "will take some time. Please confirm to continue"
-msgstr "esto tomará algún tiempo. Por favor, confirme para continuar"
+msgstr "しばらく時間がかかります。続けるにはOKをクリック。"
 
 #: ../pgc-options.php:89
 msgid "Cleanup: please confirm to continue"
-msgstr "Limpiar: por favor confirme para continuar"
+msgstr "クリーンアップ：続けるにはOKをクリック"
 
 #: ../pgc-options.php:97
 msgid "Click &lt;Scan&gt; to gather information how plugins use your WordPress database"
-msgstr "Haga clic en <Escanear> para obtener información de cómo los plugins utilizan la base de datos de WordPress"
+msgstr "&lt;スキャンする&gt;をクリックして、プラグインがワードプレスのデータベースをどのように使っているかの情報を収集。"
 
 #: ../pgc-options.php:101
 #: ../plugins-garbage-collector.php:88
 msgid "Scan"
-msgstr "Escanear"
+msgstr "スキャンする"
 
 #: ../pgc-options.php:109
 msgid "Let's see what tables in your database do not belong to the core WordPress installation:"
-msgstr "WordPress:"
+msgstr "プラグインによって追加されたデータベースのテーブル："
 
 #: ../pgc-options.php:115
 msgid "Table Name"
-msgstr "Nombre de la tabla"
+msgstr "テーブル名"
 
 #: ../pgc-options.php:116
 msgid "Records #"
-msgstr "Registros"
+msgstr "レコード #"
 
 #: ../pgc-options.php:117
 msgid "KBytes #"
-msgstr "KBytes"
+msgstr "キロバイト #"
 
 #: ../pgc-options.php:118
 msgid "Plugin Name"
-msgstr "Nombre del plugin"
+msgstr "プラグイン名"
 
 #: ../pgc-options.php:119
 msgid "Plugin State"
-msgstr "Estado del plugin"
+msgstr "プラグインの状態"
 
 #: ../pgc-options.php:178
 msgid "Congratulations! It seems that your WordPress database is clean."
-msgstr "Felicitaciones! Al parecer la base de datos de Wordpress está limpia."
+msgstr "おめでとうございます！あなたのデーtベースはクリーンです。"
 
 #: ../plugins-garbage-collector.php:41
 msgid "Plugins Garbage Collector"
-msgstr "Plugins Garbage Collector"
+msgstr "プラグイン・ゴミ・コレクター"
 
 #: ../plugins-garbage-collector.php:43
 msgid " requires WordPress 2.9 or newer."
-msgstr " requiere WordPress 2.9 en adelante."
+msgstr "ワードプレス2.9以上に対応。"
 
 #: ../plugins-garbage-collector.php:43
 msgid "Please update!"
-msgstr "Por favor actualice!"
+msgstr "アプデートしてください！"
 
 #~ msgid "Action Page"
 #~ msgstr "Страница действий"
