--- a/lang/pgc-id_ID.po
+++ b/lang/pgc-id_ID.po
@@ -4,7 +4,7 @@ msgstr ""
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2010-05-03 07:46+0600\n"
 "PO-Revision-Date: \n"
-"Last-Translator: vladimir <vladimir@shinephp.com>\n"
+"Last-Translator: Masino Sinaga <admin@openscriptsolution.com>\n"
 "Language-Team: Masino Sinaga <admin@openscriptsolution.com>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -51,23 +51,23 @@ msgstr "Ini saya, pembuat"
 
 #: ../pgc-options.php:63
 msgid "For the help with French translation"
-msgstr ""
+msgstr "Untuk bantuan dengan terjemahan bahasa Perancis"
 
 #: ../pgc-options.php:64
 msgid "For the help with German translation"
-msgstr ""
+msgstr "Untuk bantuan dengan terjemahan bahasa Jerman"
 
 #: ../pgc-options.php:65
 msgid "For the help with Indonesian translation"
-msgstr ""
+msgstr "Untuk bantuan dengan terjemahan bahasa Indonesia"
 
 #: ../pgc-options.php:66
 msgid "For the help with Japanese translation"
-msgstr ""
+msgstr "Untuk bantuan dengan terjemahan bahasa Jepang"
 
 #: ../pgc-options.php:67
 msgid "For the help with Spanish translation"
-msgstr ""
+msgstr "Untuk bantuan dengan terjemahan bahasa Spanyol"
 
 #: ../pgc-options.php:68
 msgid "Do you wish to see your name with link to your site here? You are welcome! Your help with translation and new ideas are very appreciated."
@@ -83,11 +83,11 @@ msgstr "membutuhkan beberapa menit. Konfirmasikan untuk melanjutkan"
 
 #: ../pgc-options.php:100
 msgid "Select at least one table before click on Delete button"
-msgstr ""
+msgstr "Pilih sedikitnya satu tabel sebelum menekan tombol Hapus"
 
 #: ../pgc-options.php:103
 msgid "Delete database tables last confirmation: Click \"Cancel\" if you have any doubt."
-msgstr ""
+msgstr "Konfirmasi terakhir penghapusan tabel basis: Klik \"Batal\" jika Anda ragu-ragu."
 
 #: ../pgc-options.php:111
 msgid "Click &lt;Scan&gt; to gather information how plugins use your WordPress database"
