--- a/lang/pgc-es_ES.po
+++ b/lang/pgc-es_ES.po
@@ -4,7 +4,7 @@ msgstr ""
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2010-05-03 07:46+0600\n"
 "PO-Revision-Date: \n"
-"Last-Translator: vladimir <vladimir@shinephp.com>\n"
+"Last-Translator: Melvis Leon <me_leon@hotmail.com>\n"
 "Language-Team: MLL Designs <me_leon@hotmail.com>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -83,11 +83,11 @@ msgstr "esto tomará algún tiempo. Por favor, confirme para continuar"
 
 #: ../pgc-options.php:100
 msgid "Select at least one table before click on Delete button"
-msgstr ""
+msgstr "Seleccione al menos una tabla antes de hacer clic en el botón Borrar"
 
 #: ../pgc-options.php:103
 msgid "Delete database tables last confirmation: Click \"Cancel\" if you have any doubt."
-msgstr ""
+msgstr "Ultima confirmación antes de borrar las tablas de la base de datos. Clic \"Cancelar\" si no está seguro."
 
 #: ../pgc-options.php:111
 msgid "Click &lt;Scan&gt; to gather information how plugins use your WordPress database"
@@ -140,6 +140,6 @@ msgstr "Por favor actualice!"
 
 #~ msgid "Cleanup: please confirm to continue"
 #~ msgstr "Limpiar: por favor confirme para continuar"
+
 #~ msgid "Action Page"
 #~ msgstr "Страница действий"
-
