--- a/lang/pgc-it_IT.po
+++ b/lang/pgc-it_IT.po
@@ -2,15 +2,15 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Plugins Garbage Collector\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2010-05-12 21:27+0600\n"
+"POT-Creation-Date: 2010-05-12 21:23+0600\n"
 "PO-Revision-Date: \n"
 "Last-Translator: vladimir <vladimir@shinephp.com>\n"
-"Language-Team: MLL Designs <me_leon@hotmail.com>\n"
+"Language-Team: ShinePHP.com <vladimir@shinephp.com>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Poedit-Language: Spanish\n"
-"X-Poedit-Country: SPAIN\n"
+"X-Poedit-Language: English\n"
+"X-Poedit-Country: RUSSIAN FEDERATION\n"
 "X-Poedit-SourceCharset: utf-8\n"
 "X-Poedit-KeywordsList: __;_e\n"
 "X-Poedit-Basepath: .\n"
@@ -18,20 +18,20 @@ msgstr ""
 
 #: ../pgc-options.php:54
 msgid "About this Plugin:"
-msgstr "Acerca de este plugin:"
+msgstr "Riguardo a questo plugin"
 
 #: ../pgc-options.php:55
 msgid "Author's website"
-msgstr "Website del autor"
+msgstr "Sito web dell'autore"
 
 #: ../pgc-options.php:56
 msgid "Plugin webpage"
-msgstr "Página del plugin"
+msgstr "Pagina web del plugin"
 
 #: ../pgc-options.php:57
 #: ../plugins-garbage-collector.php:98
 msgid "Changelog"
-msgstr "Historial de cambios"
+msgstr "Changelog"
 
 #: ../pgc-options.php:58
 msgid "FAQ"
@@ -39,96 +39,92 @@ msgstr "FAQ"
 
 #: ../pgc-options.php:59
 msgid "Donate"
-msgstr "Donar"
+msgstr "Fai una donazione"
 
 #: ../pgc-options.php:61
 msgid "Greetings:"
-msgstr "Saludos:"
+msgstr "Saluti:"
 
 #: ../pgc-options.php:62
 msgid "It's me, the author"
-msgstr "Soy yo, el autor"
+msgstr "Sono io, l'autore"
 
 #: ../pgc-options.php:63
 msgid "For the help with French translation"
-msgstr "Por la ayuda con la traducción al Francés"
+msgstr "Per l'aiuto con la traduzione francese"
 
 #: ../pgc-options.php:64
 msgid "For the help with German translation"
-msgstr "Por la ayuda con la traducción al alemán"
+msgstr "Per l'aiuto con la traduzione tedesca"
 
 #: ../pgc-options.php:65
 msgid "For the help with Indonesian translation"
-msgstr "Por la ayuda con la traducción al Indonesio"
+msgstr "Per l'aiuto con la traduzione Indonesiana"
 
 #: ../pgc-options.php:66
 msgid "For the help with Italian translation"
-msgstr "Por la ayuda con la traducción al Italiano"
+msgstr "Per l'aiuto con la traduzione Italiano"
 
 #: ../pgc-options.php:67
 msgid "For the help with Japanese translation"
-msgstr "Por la ayuda con la traducción al Japonés"
+msgstr "Per l'aiuto con la traduzione giapponese"
 
 #: ../pgc-options.php:68
 msgid "For the help with Spanish translation"
-msgstr "Por la ayuda con la traducción al Español"
+msgstr "Per l'aiuto con la traduzione spagnola"
 
 #: ../pgc-options.php:69
 msgid "Do you wish to see your name with link to your site here? You are welcome! Your help with translation and new ideas are very appreciated."
-msgstr "¿Deseas ver tu nombre con enlace a tu sitio en esta lista? Eres bienvenido! Tu ayuda con la traducción y las nuevas ideas son muy apreciadas."
+msgstr "Vorresti vedere il tuo nome con il link al tuo sito qui? Sei il benvenuto! Il tuo aiuto con la traduzione e nuove idee sono molto apprezzate."
 
 #: ../pgc-options.php:78
 msgid "Scanning"
-msgstr "Escaneando"
+msgstr "Esaminando"
 
 #: ../pgc-options.php:82
 msgid "will take some time. Please confirm to continue"
-msgstr "esto tomará algún tiempo. Por favor, confirme para continuar"
+msgstr "ci vorrà un po di tempo. Per favore conferma per continuare"
 
 #: ../pgc-options.php:101
 msgid "Select at least one table before click on Delete button"
-msgstr "Seleccione al menos una tabla antes de hacer clic en el botón Borrar"
+msgstr "Seleziona almeno una tabella prima di cliccare sul tasto Elimina"
 
 #: ../pgc-options.php:104
 msgid "Delete database tables last confirmation: Click \"Cancel\" if you have any doubt."
-msgstr "Ultima confirmación antes de borrar las tablas de la base de datos. Clic \"Cancelar\" si no está seguro."
+msgstr "Ultima conferma per l eliminazione delle tabelle del database: Clicca \"Cancella\" se hai qualche dubbio."
 
 #: ../pgc-options.php:112
 msgid "Click &lt;Scan&gt; to gather information how plugins use your WordPress database"
-msgstr "Haga clic en <Escanear> para obtener información de cómo los plugins utilizan la base de datos de WordPress"
+msgstr "Clicca &lt;Scan&gt; per raccogliere informazioni su come i plugin utilizzano il tuo database WordPress"
 
 #: ../pgc-options.php:116
 #: ../plugins-garbage-collector.php:88
 msgid "Scan"
-msgstr "Escanear"
+msgstr "Esamina"
 
 #: ../pgc-options.php:127
 msgid "Table Name"
-msgstr "Nombre de la tabla"
+msgstr "Nome della tabella"
 
 #: ../pgc-options.php:128
 msgid "Records #"
-msgstr "Registros"
+msgstr "Record #"
 
 #: ../pgc-options.php:129
 msgid "KBytes #"
-msgstr "KBytes"
+msgstr "KB #"
 
 #: ../pgc-options.php:130
 msgid "Plugin Name"
-msgstr "Nombre del plugin"
+msgstr "Nome del plugin"
 
 #: ../pgc-options.php:131
 msgid "Plugin State"
-msgstr "Estado del plugin"
+msgstr "Stato del plugin"
 
 #: ../pgc-options.php:138
 msgid "Let's see what tables in your database do not belong to the core WordPress installation:"
-msgstr "WordPress:"
-
-#: ../pgc-options.php:214
-msgid "Delete Tables"
-msgstr ""
+msgstr "Guarda quali tabelle nel tuo database non appartengono al core di WordPress:"
 
 #: ../pgc-options.php:218
 msgid "Attention!"
@@ -140,7 +136,7 @@ msgstr ""
 
 #: ../pgc-options.php:228
 msgid "Congratulations! It seems that your WordPress database is clean."
-msgstr "Felicitaciones! Al parecer la base de datos de Wordpress está limpia."
+msgstr "Congratulazioni! Sembra che il tuo database wordpress sia pulito."
 
 #: ../plugins-garbage-collector.php:41
 msgid "Plugins Garbage Collector"
@@ -148,14 +144,12 @@ msgstr "Plugins Garbage Collector"
 
 #: ../plugins-garbage-collector.php:43
 msgid " requires WordPress 2.9 or newer."
-msgstr " requiere WordPress 2.9 en adelante."
+msgstr "richiede WordPress 2.9 o superiore."
 
 #: ../plugins-garbage-collector.php:43
 msgid "Please update!"
-msgstr "Por favor actualice!"
+msgstr "Per favore, aggiorna!"
 
 #~ msgid "Cleanup: please confirm to continue"
-#~ msgstr "Limpiar: por favor confirme para continuar"
-#~ msgid "Action Page"
-#~ msgstr "Страница действий"
+#~ msgstr "Ripulire: per favore conferma per continuare"
 
