--- a/lang/pgc-it_IT.po
+++ b/lang/pgc-it_IT.po
@@ -4,7 +4,7 @@ msgstr ""
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2010-05-12 21:23+0600\n"
 "PO-Revision-Date: \n"
-"Last-Translator: vladimir <vladimir@shinephp.com>\n"
+"Last-Translator: \n"
 "Language-Team: ShinePHP.com <vladimir@shinephp.com>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -18,7 +18,7 @@ msgstr ""
 
 #: ../pgc-options.php:54
 msgid "About this Plugin:"
-msgstr "Riguardo a questo plugin"
+msgstr "Riguardo a questo plugin:"
 
 #: ../pgc-options.php:55
 msgid "Author's website"
@@ -79,7 +79,7 @@ msgstr "Vorresti vedere il tuo nome con il link al tuo sito qui? Sei il benvenut
 
 #: ../pgc-options.php:78
 msgid "Scanning"
-msgstr "Esaminando"
+msgstr "Per esaminare"
 
 #: ../pgc-options.php:82
 msgid "will take some time. Please confirm to continue"
@@ -95,7 +95,7 @@ msgstr "Ultima conferma per l\\'eliminazione delle tabelle del database: Clicca 
 
 #: ../pgc-options.php:112
 msgid "Click &lt;Scan&gt; to gather information how plugins use your WordPress database"
-msgstr "Clicca &lt;Scan&gt; per raccogliere informazioni su come i plugin utilizzano il tuo database WordPress"
+msgstr "Clicca &lt;Esamina&gt; per raccogliere informazioni su come i plugin utilizzano il tuo database WordPress"
 
 #: ../pgc-options.php:116
 #: ../plugins-garbage-collector.php:88
@@ -128,11 +128,11 @@ msgstr "Guarda quali tabelle nel tuo database non appartengono al core di WordPr
 
 #: ../pgc-options.php:218
 msgid "Attention!"
-msgstr ""
+msgstr "Attenzione!"
 
 #: ../pgc-options.php:218
 msgid "Operation rollback is not possible. Consider to make database backup first. Please double think before click <code>Delete Tables</code> button."
-msgstr ""
+msgstr "Non è possibile effettuare il rollback. Prima considera di effettuare il backup del database. Per favore, pensaci due volte prima di cliccare sul bottone <code>Cancella Tabelle</code>."
 
 #: ../pgc-options.php:228
 msgid "Congratulations! It seems that your WordPress database is clean."
@@ -152,4 +152,3 @@ msgstr "Per favore, aggiorna!"
 
 #~ msgid "Cleanup: please confirm to continue"
 #~ msgstr "Ripulire: per favore conferma per continuare"
-
