* Dutch - Nederlands translation was updated. Thanks to Harald Labout. * load_plugin_textdomain() call moved to the 'plugins_loaded' hook for higher compatibility with translation plugins.
git-svn-id: https://plugins.svn.wordpress.org/plugins-garbage-collector/trunk@632998 b8457f37-d9ea-0310-8a92-e5e31aec5664

--- a/lang/pgc-nl_NL.po
+++ b/lang/pgc-nl_NL.po
@@ -1,246 +1,292 @@
 msgid ""
 msgstr ""
-"Project-Id-Version: Plugins Garbage Collector\n"
+"Project-Id-Version: Plugins Garbage Collector v0.9.11\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2012-07-16 22:00+0700\n"
-"PO-Revision-Date: \n"
+"POT-Creation-Date: 2012-12-02 19:11+0700\n"
+"PO-Revision-Date: 2012-12-02 19:11+0700\n"
 "Last-Translator: Vladimir Garagulya <vladimir@shinephp.com>\n"
 "Language-Team: \n"
 "Language: \n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"Plural-Forms: nplurals=2; plural=n != 1;\n"
 "X-Poedit-SourceCharset: utf-8\n"
-"X-Poedit-KeywordsList: __;_e\n"
+"X-Poedit-KeywordsList: __;_e;__ngettext:1,2;_n:1,2;__ngettext_noop:1,2;_n_noop:1,2;_c,_nc:4c,1,2;_x:1,2c;_ex:1,2c;_nx:4c,1,2;_nx_noop:4c,1,2\n"
 "X-Poedit-Basepath: .\n"
+"X-Textdomain-Support: yes\n"
 "X-Poedit-SearchPath-0: ..\n"
 
-#: ../pgc-lib.php:252
-#: ../pgc-lib.php:379
+# @ pgc
+#: ../pgc-lib.php:250
+#: ../pgc-lib.php:377
 msgid "Hide"
-msgstr ""
+msgstr "Verberg"
 
-#: ../pgc-lib.php:253
-#: ../pgc-lib.php:380
+# @ pgc
+#: ../pgc-lib.php:251
+#: ../pgc-lib.php:378
 msgid "Table Name"
 msgstr "Tabel naam"
 
-#: ../pgc-lib.php:254
+# @ pgc
+#: ../pgc-lib.php:252
 msgid "Records #"
 msgstr "Records #"
 
-#: ../pgc-lib.php:255
+# @ pgc
+#: ../pgc-lib.php:253
 msgid "KBytes #"
 msgstr "KBytes #"
 
-#: ../pgc-lib.php:256
-#: ../pgc-lib.php:382
+# @ pgc
+#: ../pgc-lib.php:254
+#: ../pgc-lib.php:380
 msgid "Plugin Name"
 msgstr "Plugin naam"
 
-#: ../pgc-lib.php:257
-#: ../pgc-lib.php:383
+# @ pgc
+#: ../pgc-lib.php:255
+#: ../pgc-lib.php:381
 msgid "Plugin State"
-msgstr "Plugin Status"
+msgstr "Plugin status"
 
-#: ../pgc-lib.php:265
+# @ pgc
+#: ../pgc-lib.php:263
 msgid "Let's see what tables in your database do not belong to the core WordPress installation:"
-msgstr "Welke tabellen in jouw database behoren niet tot de core WordPress installatie:"
+msgstr "De volgende tabellen in jouw DB behoren niet tot de core WP installatie:"
 
-#: ../pgc-lib.php:345
+# @ pgc
+#: ../pgc-lib.php:343
 #: ../pgc-lib.php:546
 msgid "Some tables are hidden by you. Turn on \"Show hidden DB tables\" option and click \"Scan\" button again to show them."
-msgstr ""
+msgstr "Sommige Tabellen zijn verborgen door de gebruiker. Selecteer \"Toon verborgen DB tabellen\" optie en klik de \"Scan\" knop om deze te tonen."
 
-#: ../pgc-lib.php:353
+# @ pgc
+#: ../pgc-lib.php:351
 msgid "Delete Tables"
-msgstr ""
+msgstr "Verwijder Tabellen"
 
-#: ../pgc-lib.php:357
+# @ pgc
+#: ../pgc-lib.php:355
 #: ../pgc-lib.php:558
 msgid "Attention!"
-msgstr ""
+msgstr "Opgelet!"
 
-#: ../pgc-lib.php:358
+# @ pgc
+#: ../pgc-lib.php:356
 msgid "Operation rollback is not possible. Consider to make database backup first. Please double think before click <code>Delete Tables</code> button."
-msgstr ""
+msgstr "Verwijdering kan niet ongedaan worden gemaakt. Overweeg een Database backup te maken. Denk goed na alvorens de <code> Verwijder Tabellen </code> knop te selecteren."
 
-#: ../pgc-lib.php:367
+# @ pgc
+#: ../pgc-lib.php:365
 msgid "Congratulations! It seems that your WordPress database is clean."
-msgstr "Gefelicieerd! het lijkt erop dat jouw WordPress database schoon is."
+msgstr "Gefelicieerd! Het lijkt erop dat jouw WordPress database schoon is."
 
-#: ../pgc-lib.php:381
+# @ pgc
+#: ../pgc-lib.php:379
 msgid "Extra Field"
-msgstr ""
+msgstr "Extra veld"
 
+# @ pgc
 #: ../pgc-lib.php:554
 msgid "Delete Extra Columns"
-msgstr ""
+msgstr "Verwijder extra kolommen"
 
+# @ pgc
 #: ../pgc-lib.php:559
 msgid "Operation rollback is not possible. Consider to make database backup first. Please double think before click <code>Delete Extra Columns</code> button."
-msgstr ""
+msgstr "Verwijdering kan niet ongedaan worden gemaakt. Overweeg een Database backup te maken. Denk goed na alvorens de <code> Verwijder Extra Kolommen </code> knop te selecteren."
 
+# @ pgc
 #: ../pgc-lib.php:568
 msgid "Congratulations! It seems that your WordPress database tables structure is not changed"
-msgstr "Gefelicieerd! het lijkt erop dat jouw WordPress database schoon is."
+msgstr "Gefeliciteerd! het lijkt erop dat de WordPress database schoon is."
 
+# @ pgc
 #: ../pgc-lib.php:581
 msgid "This feature is still in production and will be realized in the next version"
-msgstr ""
+msgstr "Deze functie is in ontwikkeling en kan in een volgende versie worden toegevoegd"
 
-#: ../pgc-options.php:55
+# @ pgc
+#: ../pgc-options.php:48
 msgid "Turn on at least one Search checkbox before start Scan process!"
-msgstr ""
+msgstr "Selecteer minimaal één Zoek checkbox voordat het Scan proces wordt gestart!"
 
-#: ../pgc-options.php:59
+# @ pgc
+#: ../pgc-options.php:52
 msgid "Scanning"
 msgstr "Scannen"
 
-#: ../pgc-options.php:63
+# @ pgc
+#: ../pgc-options.php:56
 msgid "will take some time. Please confirm to continue"
-msgstr "Neemt enige tijd. Bevestig om door te gaan"
+msgstr "neemt enige tijd in beslag. Bevestig om door te gaan."
 
-#: ../pgc-options.php:86
+# @ pgc
+#: ../pgc-options.php:79
 msgid "Select at least one table before click on Delete button"
-msgstr ""
+msgstr "Selecteer minimaal één Tabel voordat de Delete button wordt geselecteerd"
 
-#: ../pgc-options.php:89
+# @ pgc
+#: ../pgc-options.php:82
 msgid "Delete database tables last confirmation: Click \"Cancel\" if you have any doubt."
-msgstr ""
+msgstr "Laatste waarschuwing voor het verwijderen van de Database Tabellen: Selecteer \"Annuleren\" als je twijfelt."
 
-#: ../pgc-options.php:99
+# @ pgc
+#: ../pgc-options.php:92
 msgid "Search DB for tables created by plugins"
-msgstr ""
+msgstr "Doorzoek de DB voor tabellen gecreëerd door plugins"
 
-#: ../pgc-options.php:100
+# @ pgc
+#: ../pgc-options.php:93
 msgid "Search none-WP tables"
-msgstr ""
+msgstr "Zoek naar NIET WP tabellen"
 
-#: ../pgc-options.php:103
+# @ pgc
+#: ../pgc-options.php:96
 msgid "Search DB for changes which plugins made to the original WP tables structure"
-msgstr ""
+msgstr "Zoek in de DB naar veranderingen in originele WP tabellen die zijn aangebracht door plugins."
 
-#: ../pgc-options.php:104
+# @ pgc
+#: ../pgc-options.php:97
 msgid "Search WP tables structure changes (beta - experimental)"
-msgstr ""
+msgstr "Zoek naar WP tabel structuur veranderingen (beta - experimenteel)"
 
-#: ../pgc-options.php:107
+# @ pgc
+#: ../pgc-options.php:100
 msgid "Include tables which are hidden by your request to the search results"
-msgstr ""
+msgstr "Inclusief tabellen die door uw verzoek verborgen bij de zoekresultaten"
 
-#: ../pgc-options.php:108
+# @ pgc
+#: ../pgc-options.php:101
 msgid "Show hidden tables"
-msgstr ""
+msgstr "Toon verborgen tabellen"
 
-#: ../pgc-options.php:112
-#: ../plugins-garbage-collector.php:88
+# @ pgc
+#: ../pgc-options.php:105
+#: ../plugins-garbage-collector.php:100
 msgid "Scan"
 msgstr "Scan"
 
-#: ../pgc-options.php:112
+# @ pgc
+#: ../pgc-options.php:105
 msgid "Click this button to gather information how plugins use your WordPress database"
 msgstr "Klik &lt;Scan&gt; om infomatie te verzamelen hoe plugins jouw database gebruiken"
 
-#: ../pgc-options.php:127
+# @ pgc
+#: ../pgc-options.php:120
 msgid "About this Plugin:"
 msgstr "Over deze Plugin:"
 
-#: ../pgc-options.php:128
+# @ pgc
+#: ../pgc-options.php:121
 msgid "Author's website"
 msgstr "Website auteur"
 
-#: ../pgc-options.php:129
+# @ pgc
+#: ../pgc-options.php:122
 msgid "Plugin webpage"
 msgstr "Plugin webpagina"
 
-#: ../pgc-options.php:130
-#: ../plugins-garbage-collector.php:98
+# @ pgc
+#: ../pgc-options.php:123
+#: ../plugins-garbage-collector.php:110
 msgid "Changelog"
 msgstr "Veranderingen"
 
-#: ../pgc-options.php:131
+# @ pgc
+#: ../pgc-options.php:124
 msgid "FAQ"
 msgstr "Veel gestelde vragen"
 
-#: ../pgc-options.php:132
+# @ pgc
+#: ../pgc-options.php:125
 msgid "Donate"
 msgstr "Bijdrage"
 
-#: ../pgc-options.php:135
+# @ pgc
+#: ../pgc-options.php:128
 msgid "Greetings:"
-msgstr "Welkom: "
+msgstr "Welkom:"
 
-#: ../pgc-options.php:137
+# @ pgc
+#: ../pgc-options.php:130
 msgid "It's me, the author"
 msgstr "Ik ben het, de auteur"
 
-#: ../pgc-options.php:138
+# @ pgc
+#: ../pgc-options.php:131
 msgid "For the help with Chinese translation"
-msgstr ""
+msgstr "Voor de hulp bij Chinese vertaling"
 
-#: ../pgc-options.php:139
+# @ pgc
+#: ../pgc-options.php:132
 msgid "For the help with Czech translation"
 msgstr "Voor de hulp bij de Czech vertaling"
 
-#: ../pgc-options.php:140
+# @ pgc
+#: ../pgc-options.php:133
 msgid "For the help with French translation"
 msgstr "Voor de hulp bij de Franse vertaling"
 
-#: ../pgc-options.php:141
+# @ pgc
+#: ../pgc-options.php:134
 msgid "For the help with German translation"
 msgstr "Voor de hulp bij de Duitse vertaling"
 
-#: ../pgc-options.php:142
+# @ pgc
+#: ../pgc-options.php:135
 msgid "For the help with Indonesian translation"
 msgstr "Voor de hulp bij de Franse vertaling"
 
-#: ../pgc-options.php:143
+# @ pgc
+#: ../pgc-options.php:136
 msgid "For the help with Italian translation"
 msgstr "Voor de hulp bij de Italian vertaling"
 
-#: ../pgc-options.php:144
+# @ pgc
+#: ../pgc-options.php:137
 msgid "For the help with Japanese translation"
 msgstr "Voor de hulp bij de Franse vertaling"
 
-#: ../pgc-options.php:145
+# @ pgc
+#: ../pgc-options.php:138
 msgid "For the help with Lithuanian translation"
-msgstr ""
+msgstr "Voor de hulp bij de Litouwse vertaling"
 
-#: ../pgc-options.php:146
+# @ pgc
+#: ../pgc-options.php:139
 msgid "For the help with Polish translation"
-msgstr ""
+msgstr "Voor hulp bij de Poolse vertaling"
 
-#: ../pgc-options.php:147
+# @ pgc
+#: ../pgc-options.php:140
 msgid "For the help with Spanish translation"
 msgstr "Voor de hulp bij de Franse vertaling"
 
-#: ../pgc-options.php:149
+# @ pgc
+#: ../pgc-options.php:142
 msgid "For the help with bug fix and contribution to source code"
-msgstr ""
+msgstr "Voor de hulp bij het oplossen van bugs en het bijdragen tot verbetering van de broncode"
 
-#: ../pgc-options.php:151
+# @ pgc
+#: ../pgc-options.php:144
 msgid "Do you wish to see your name with link to your site here? You are welcome! Your help with translation and new ideas are very appreciated."
-msgstr "Je naam met een link naar je website hier? Hulp is welkom! Jouw hulp met vertalen en nieuwe ideeën zijn welkom."
+msgstr "Wil je hier je eigen naam zien inclusief een link naar je eigen website? Je bent van harte welkom! Je hulp met vertalen en het aanbrengen van nieuwe ideeën wordt zeer gewaardeerd."
 
-#: ../plugins-garbage-collector.php:41
+# @ pgc
+#: ../plugins-garbage-collector.php:40
 msgid "Plugins Garbage Collector"
 msgstr "Plugins Garbage Collector"
 
-#: ../plugins-garbage-collector.php:43
+# @ pgc
+#: ../plugins-garbage-collector.php:42
 msgid " requires WordPress 3.0 or newer."
-msgstr " vereist  WordPress 3.0 of nieuwer."
+msgstr " vereist  WordPress 3.0 of hoger."
 
-#: ../plugins-garbage-collector.php:43
+# @ pgc
+#: ../plugins-garbage-collector.php:42
 msgid "Please update!"
 msgstr "Updaten svp!"
 
-#~ msgid ""
-#~ "Click &lt;Scan&gt; to gather information how plugins use your WordPress "
-#~ "database"
-#~ msgstr ""
-#~ "Klik &lt;Scan&gt; om infomatie te verzamelen hoe plugins jouw database "
-#~ "gebruiken"
-
-#~ msgid "Cleanup: please confirm to continue"
-#~ msgstr "Cleanuo: Bevestig om door te gaan"
